--- a/my_notebook.tex
+++ b/my_notebook.tex
@@ -452,12 +452,46 @@
     \hypertarget{import-packages}{%
 \subsection{import packages}\label{import-packages}}
 
+    \begin{Verbatim}[commandchars=\\\{\}]
+The required packages for this Notebook are:
+
+    \end{Verbatim}
+
+    
+        
+    \begin{table}[ht] \rowcolors{2}{white}{gray!25}
+\begin{tabular}[l]{ll}
+\toprule
+Package & Version\\ 
+\midrule
+ipypublish & 0.10.10\\ 
+prettytable & 0.7.2\\ 
+numpy & 1.16.5\\ 
+pandas & 0.25.1\\ 
+matplotlib & 3.1.1\\ 
+ipython & 7.12.0\\ 
+\bottomrule 
+ \end{tabular}
+\end{table}
+
+    
+    
+
     \hypertarget{definition-of-functions}{%
 \subsection{definition of functions}\label{definition-of-functions}}
 
     \hypertarget{function-tp-display-beatiful-tables}{%
 \subsubsection{function tp display beatiful
 tables}\label{function-tp-display-beatiful-tables}}
+
+    \begin{verbatim}
+def format_for_print(df,n=0,wide=False):
+    df2=df.round(n).reset_index()
+    col=[w.replace("_", " ") for w in list(df2.columns)]
+    return pt.PrettyTable(df2.values,col,wide_table=wide)
+\end{verbatim}
+
+    
 
     \hypertarget{import-data}{%
 \section{import data}\label{import-data}}
@@ -487,6 +521,21 @@ FF & m/s & wind speed\\
     
     
 
+    
+        
+    
+    \begin{verbatim}
+(['Symbol', 'Unit', 'Description'],
+ [['G Gh', 'kWh/m²', 'Global solar irradiance monthly averages'],
+  ['G Dh', 'kWh/m²', 'Diffuse solar irradiance monthly averages'],
+  ['Ta', '°C', 'Air temperature'],
+  ['Td', '°C', 'Dew point'],
+  ['FF', 'm/s', 'wind speed']])
+    \end{verbatim}
+
+    
+    
+
     \hypertarget{text-and-images}{%
 \section{Text and Images}\label{text-and-images}}
 
@@ -496,7 +545,7 @@ FF & m/s & wind speed\\
     
         
     \begin{figure}
-        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{my_notebook_files/my_notebook_12_0.png}\end{center}
+        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{my_notebook_files/my_notebook_16_0.png}\end{center}
         \caption{}
         \label{}
     \end{figure}
@@ -512,7 +561,7 @@ text
     
         
     \begin{figure}
-        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{my_notebook_files/my_notebook_15_0.png}\end{center}
+        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{my_notebook_files/my_notebook_19_0.png}\end{center}
         \caption{}
         \label{}
     \end{figure}
@@ -597,26 +646,26 @@ after comma
 \toprule
 index & col 1 & col 2 & col 3 & col 4 & col 5 & col 6 & col 7 & col 8 & col 9 & col 10 & col 11 & col 12 & col 13 & col 14 & col 15\\ 
 \midrule
-0.0 & 193.468 & 217.747 & 74.088 & 216.577 & 223.108 & 154.414 & 173.719 & 202.266 & 111.807 & 29.414 & 62.86 & 177.139 & 153.392 & 60.018 & 227.563\\ 
-1.0 & 153.298 & 159.262 & 33.865 & 249.128 & 126.76 & 120.847 & 203.907 & 193.997 & 227.914 & 227.2 & 135.358 & 29.597 & 155.952 & 34.09 & 132.166\\ 
-2.0 & 53.769 & 242.73 & 83.46 & 197.067 & 115.015 & 184.914 & 184.83 & 2.474 & 14.771 & 110.793 & 167.814 & 146.565 & 8.199 & 63.969 & 171.777\\ 
-3.0 & 234.505 & 178.021 & 66.233 & 116.85 & 55.357 & 55.444 & 131.67 & 94.915 & 176.811 & 79.357 & 241.689 & 153.596 & 178.773 & 133.784 & 99.016\\ 
-4.0 & 79.537 & 186.396 & 143.15 & 10.168 & 121.453 & 98.313 & 90.624 & 33.97 & 92.087 & 157.032 & 205.538 & 65.146 & 237.744 & 98.346 & 66.781\\ 
-5.0 & 101.462 & 160.45 & 34.021 & 95.413 & 231.483 & 240.933 & 32.725 & 61.201 & 130.401 & 135.786 & 46.631 & 202.238 & 105.153 & 55.804 & 240.981\\ 
-6.0 & 69.489 & 92.852 & 147.785 & 124.974 & 13.94 & 181.156 & 102.173 & 67.36 & 175.679 & 51.077 & 135.84 & 34.657 & 19.303 & 92.653 & 116.911\\ 
-7.0 & 149.337 & 22.286 & 76.755 & 130.718 & 79.24 & 225.759 & 143.208 & 199.84 & 248.894 & 109.025 & 232.583 & 168.047 & 64.048 & 251.549 & 186.632\\ 
-8.0 & 97.572 & 189.406 & 128.158 & 88.069 & 211.657 & 142.413 & 198.715 & 7.407 & 132.209 & 236.648 & 22.204 & 164.57 & 186.894 & 9.507 & 245.202\\ 
-9.0 & 55.245 & 12.943 & 147.295 & 128.275 & 191.164 & 75.151 & 40.836 & 4.836 & 119.614 & 32.968 & 247.663 & 234.789 & 179.396 & 5.869 & 204.703\\ 
-10.0 & 63.098 & 249.849 & 118.128 & 130.882 & 211.026 & 248.031 & 146.11 & 50.196 & 73.65 & 237.862 & 201.408 & 125.862 & 95.575 & 36.835 & 56.259\\ 
-11.0 & 146.691 & 83.741 & 14.205 & 30.411 & 49.943 & 70.856 & 197.979 & 176.394 & 138.764 & 195.93 & 127.384 & 39.268 & 72.596 & 226.21 & 74.309\\ 
-12.0 & 164.649 & 128.292 & 249.654 & 9.711 & 5.539 & 177.306 & 78.033 & 225.886 & 95.844 & 151.259 & 227.275 & 60.048 & 134.5 & 86.698 & 139.855\\ 
-13.0 & 140.557 & 136.554 & 239.475 & 143.523 & 11.472 & 214.933 & 191.01 & 119.808 & 221.605 & 207.275 & 164.863 & 90.29 & 163.025 & 205.352 & 107.36\\ 
-14.0 & 90.686 & 126.058 & 89.596 & 2.622 & 5.41 & 103.273 & 175.919 & 221.609 & 32.41 & 135.247 & 92.534 & 189.594 & 94.016 & 251.382 & 189.963\\ 
-15.0 & 71.751 & 228.602 & 17.317 & 81.921 & 44.116 & 20.637 & 118.625 & 248.983 & 187.092 & 144.087 & 88.019 & 123.241 & 117.35 & 225.751 & 188.825\\ 
-16.0 & 130.668 & 98.465 & 132.048 & 83.604 & 93.253 & 175.352 & 228.378 & 195.237 & 214.696 & 101.121 & 215.758 & 2.126 & 79.65 & 118.217 & 55.12\\ 
-17.0 & 18.262 & 130.785 & 103.477 & 209.121 & 220.066 & 244.711 & 91.019 & 67.011 & 187.222 & 240.023 & 242.547 & 50.16 & 145.151 & 53.479 & 69.963\\ 
-18.0 & 227.288 & 119.244 & 186.453 & 214.862 & 99.751 & 130.582 & 119.512 & 77.435 & 218.425 & 137.012 & 181.867 & 1.054 & 124.389 & 81.17 & 121.551\\ 
-19.0 & 229.901 & 9.2 & 214.849 & 13.161 & 57.355 & 74.507 & 123.327 & 64.978 & 58.823 & 122.74 & 163.181 & 229.753 & 66.37 & 139.493 & 23.32\\ 
+0.0 & 203.296 & 170.353 & 120.157 & 69.562 & 175.545 & 83.606 & 42.985 & 15.006 & 201.066 & 244.873 & 205.922 & 236.361 & 23.049 & 157.099 & 103.137\\ 
+1.0 & 107.713 & 54.042 & 86.814 & 24.314 & 24.726 & 110.548 & 77.4 & 229.568 & 17.266 & 244.378 & 90.072 & 20.769 & 114.308 & 214.715 & 146.588\\ 
+2.0 & 239.27 & 212.6 & 183.042 & 239.396 & 211.63 & 208.054 & 41.616 & 122.705 & 82.545 & 87.526 & 67.349 & 160.098 & 85.924 & 20.963 & 182.954\\ 
+3.0 & 122.43 & 28.443 & 207.225 & 166.124 & 124.056 & 99.523 & 60.607 & 113.076 & 178.929 & 139.558 & 110.456 & 182.563 & 139.969 & 239.076 & 210.876\\ 
+4.0 & 164.397 & 3.281 & 208.881 & 101.49 & 185.898 & 136.717 & 181.302 & 70.342 & 59.093 & 101.207 & 95.574 & 17.56 & 18.208 & 37.493 & 186.145\\ 
+5.0 & 236.33 & 232.673 & 42.856 & 169.306 & 16.767 & 147.67 & 146.935 & 194.675 & 11.01 & 195.95 & 141.447 & 27.843 & 179.796 & 7.291 & 45.787\\ 
+6.0 & 56.715 & 189.396 & 184.271 & 59.158 & 149.959 & 245.124 & 111.463 & 155.38 & 134.087 & 3.994 & 32.424 & 248.415 & 153.74 & 205.65 & 219.714\\ 
+7.0 & 191.875 & 82.788 & 240.251 & 143.926 & 129.835 & 133.587 & 100.97 & 241.174 & 168.388 & 25.068 & 97.679 & 241.481 & 171.997 & 190.412 & 198.979\\ 
+8.0 & 135.594 & 242.375 & 128.774 & 245.487 & 140.37 & 163.317 & 223.338 & 61.157 & 197.576 & 162.683 & 60.22 & 41.592 & 103.603 & 53.371 & 93.509\\ 
+9.0 & 147.287 & 134.721 & 108.253 & 35.658 & 71.804 & 1.591 & 221.89 & 31.861 & 86.124 & 103.211 & 160.752 & 59.993 & 185.295 & 252.617 & 239.529\\ 
+10.0 & 107.99 & 242.826 & 20.87 & 251.699 & 239.98 & 53.651 & 63.281 & 96.372 & 25.601 & 222.378 & 127.271 & 236.955 & 195.604 & 201.073 & 50.68\\ 
+11.0 & 66.843 & 193.688 & 77.929 & 156.808 & 116.903 & 215.925 & 47.699 & 67.468 & 119.391 & 230.679 & 19.317 & 104.118 & 143.069 & 177.011 & 96.542\\ 
+12.0 & 103.571 & 51.331 & 96.66 & 90.633 & 241.807 & 47.074 & 190.508 & 219.786 & 228.043 & 96.151 & 187.646 & 233.202 & 19.263 & 227.613 & 215.424\\ 
+13.0 & 101.645 & 31.607 & 51.963 & 92.539 & 238.774 & 70.382 & 209.095 & 91.714 & 49.849 & 100.635 & 177.559 & 61.67 & 196.796 & 77.412 & 34.366\\ 
+14.0 & 30.906 & 154.445 & 20.109 & 92.019 & 72.787 & 6.324 & 245.944 & 156.275 & 198.169 & 52.48 & 228.02 & 214.756 & 106.027 & 113.523 & 215.148\\ 
+15.0 & 250.627 & 51.754 & 53.844 & 76.019 & 185.036 & 216.172 & 58.179 & 210.186 & 222.274 & 175.591 & 153.068 & 30.0 & 70.486 & 35.551 & 47.623\\ 
+16.0 & 213.321 & 104.582 & 18.562 & 67.508 & 200.546 & 143.43 & 201.902 & 184.092 & 76.982 & 135.874 & 224.323 & 63.053 & 174.118 & 141.251 & 206.455\\ 
+17.0 & 29.389 & 93.519 & 211.335 & 60.47 & 30.274 & 212.46 & 196.486 & 173.071 & 77.239 & 98.726 & 4.193 & 198.201 & 208.69 & 228.378 & 49.473\\ 
+18.0 & 195.497 & 101.95 & 249.769 & 200.754 & 83.965 & 239.988 & 39.146 & 16.22 & 32.833 & 2.431 & 231.399 & 234.421 & 192.944 & 166.454 & 143.415\\ 
+19.0 & 158.16 & 170.841 & 119.892 & 33.599 & 24.321 & 91.204 & 64.33 & 121.132 & 98.159 & 161.71 & 206.886 & 142.903 & 246.62 & 11.874 & 252.001\\ 
 \bottomrule 
  \end{tabular}
 }\end{table}
@@ -632,7 +681,7 @@ index & col 1 & col 2 & col 3 & col 4 & col 5 & col 6 & col 7 & col 8 & col 9 & 
 
         
     \begin{figure}
-        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{my_notebook_files/my_notebook_27_0.pdf}\end{center}
+        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{my_notebook_files/my_notebook_31_0.pdf}\end{center}
         \caption{}
         \label{}
     \end{figure}
@@ -643,7 +692,7 @@ index & col 1 & col 2 & col 3 & col 4 & col 5 & col 6 & col 7 & col 8 & col 9 & 
 
         
     \begin{figure}
-        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{my_notebook_files/my_notebook_29_0.pdf}\end{center}
+        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{my_notebook_files/my_notebook_33_0.pdf}\end{center}
         \caption{}
         \label{}
     \end{figure}
@@ -654,7 +703,7 @@ index & col 1 & col 2 & col 3 & col 4 & col 5 & col 6 & col 7 & col 8 & col 9 & 
 
         
     \begin{figure}
-        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{my_notebook_files/my_notebook_31_0.pdf}\end{center}
+        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{my_notebook_files/my_notebook_35_0.pdf}\end{center}
         \caption{}
         \label{}
     \end{figure}
@@ -664,14 +713,23 @@ index & col 1 & col 2 & col 3 & col 4 & col 5 & col 6 & col 7 & col 8 & col 9 & 
 \section{Example of matematic
 formulas}\label{example-of-matematic-formulas}}
 
-    example 1: \[
-y = a x + b\\
-\text{with:}\\
-y \text{: Ordonate}\\
-x \text{: Abscissa}\\
-a \text{: Slope}\\
-b \text{: Initial value}
-\]
+    example 1:
+
+\[ y = a x + b \]
+
+with:
+
+\begin{itemize}
+\tightlist
+\item
+  y : Ordonate
+\item
+  x : Abscissa
+\item
+  a : Slope
+\item
+  b : Initial value
+\end{itemize}
 
     example 2:
 
