list of table and figure, equation : work in progress

--- a/my_notebook.ipynb
+++ b/my_notebook.ipynb
@@ -953,11 +953,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-19T14:55:30.939519Z",
-     "start_time": "2020-02-19T14:55:30.932473Z"
+     "end_time": "2020-02-19T15:05:29.295875Z",
+     "start_time": "2020-02-19T15:05:29.288916Z"
     },
     "code_folding": [
      0
@@ -1064,20 +1064,21 @@
     "((* block maketitle *))\n",
     "    \n",
     "\\maketitle\n",
-    "\n",
+    "\\thispagestyle{empty}\n",
     "\\newpage\n",
     "\n",
     "\\tableofcontents\n",
-    "\n",
+    "\\thispagestyle{empty}\n",
     "\\newpage\n",
     "\n",
     "\\listoffigures\n",
-    "\n",
+    "\\thispagestyle{empty}\n",
     "\\newpage\n",
     "\n",
     "\\listoftables\n",
-    "\n",
+    "\\thispagestyle{empty}\n",
     "\\newpage\n",
+    "\n",
     "((* endblock maketitle *))\n",
     "\n",
     "\n",
