--- a/my_notebook.tex
+++ b/my_notebook.tex
@@ -431,16 +431,17 @@
 \newpage
 
 \tableofcontents
-
+\thispagestyle{empty}
 \newpage
 
 \listoffigures
-
+\thispagestyle{empty}
 \newpage
 
 \listoftables
-
+\thispagestyle{empty}
 \newpage
+
 
     
     
@@ -485,13 +486,11 @@ ipython & 7.12.0\\
 tables}\label{function-tp-display-beatiful-tables}}
 
     \begin{verbatim}
-def format_for_print(df,n=0,wide=False):
+def export_ready_format(df,n=0,wide=False):
     df2=df.round(n).reset_index()
     col=[w.replace("_", " ") for w in list(df2.columns)]
     return pt.PrettyTable(df2.values,col,wide_table=wide)
 \end{verbatim}
-
-    
 
     \hypertarget{import-data}{%
 \section{import data}\label{import-data}}
@@ -521,21 +520,6 @@ FF & m/s & wind speed\\
     
     
 
-    
-        
-    
-    \begin{verbatim}
-(['Symbol', 'Unit', 'Description'],
- [['G Gh', 'kWh/m²', 'Global solar irradiance monthly averages'],
-  ['G Dh', 'kWh/m²', 'Diffuse solar irradiance monthly averages'],
-  ['Ta', '°C', 'Air temperature'],
-  ['Td', '°C', 'Dew point'],
-  ['FF', 'm/s', 'wind speed']])
-    \end{verbatim}
-
-    
-    
-
     \hypertarget{text-and-images}{%
 \section{Text and Images}\label{text-and-images}}
 
@@ -545,7 +529,7 @@ FF & m/s & wind speed\\
     
         
     \begin{figure}
-        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{my_notebook_files/my_notebook_16_0.png}\end{center}
+        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{my_notebook_files/my_notebook_14_0.png}\end{center}
         \caption{}
         \label{}
     \end{figure}
@@ -561,7 +545,7 @@ text
     
         
     \begin{figure}
-        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{my_notebook_files/my_notebook_19_0.png}\end{center}
+        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{my_notebook_files/my_notebook_17_0.png}\end{center}
         \caption{}
         \label{}
     \end{figure}
@@ -646,26 +630,26 @@ after comma
 \toprule
 index & col 1 & col 2 & col 3 & col 4 & col 5 & col 6 & col 7 & col 8 & col 9 & col 10 & col 11 & col 12 & col 13 & col 14 & col 15\\ 
 \midrule
-0.0 & 203.296 & 170.353 & 120.157 & 69.562 & 175.545 & 83.606 & 42.985 & 15.006 & 201.066 & 244.873 & 205.922 & 236.361 & 23.049 & 157.099 & 103.137\\ 
-1.0 & 107.713 & 54.042 & 86.814 & 24.314 & 24.726 & 110.548 & 77.4 & 229.568 & 17.266 & 244.378 & 90.072 & 20.769 & 114.308 & 214.715 & 146.588\\ 
-2.0 & 239.27 & 212.6 & 183.042 & 239.396 & 211.63 & 208.054 & 41.616 & 122.705 & 82.545 & 87.526 & 67.349 & 160.098 & 85.924 & 20.963 & 182.954\\ 
-3.0 & 122.43 & 28.443 & 207.225 & 166.124 & 124.056 & 99.523 & 60.607 & 113.076 & 178.929 & 139.558 & 110.456 & 182.563 & 139.969 & 239.076 & 210.876\\ 
-4.0 & 164.397 & 3.281 & 208.881 & 101.49 & 185.898 & 136.717 & 181.302 & 70.342 & 59.093 & 101.207 & 95.574 & 17.56 & 18.208 & 37.493 & 186.145\\ 
-5.0 & 236.33 & 232.673 & 42.856 & 169.306 & 16.767 & 147.67 & 146.935 & 194.675 & 11.01 & 195.95 & 141.447 & 27.843 & 179.796 & 7.291 & 45.787\\ 
-6.0 & 56.715 & 189.396 & 184.271 & 59.158 & 149.959 & 245.124 & 111.463 & 155.38 & 134.087 & 3.994 & 32.424 & 248.415 & 153.74 & 205.65 & 219.714\\ 
-7.0 & 191.875 & 82.788 & 240.251 & 143.926 & 129.835 & 133.587 & 100.97 & 241.174 & 168.388 & 25.068 & 97.679 & 241.481 & 171.997 & 190.412 & 198.979\\ 
-8.0 & 135.594 & 242.375 & 128.774 & 245.487 & 140.37 & 163.317 & 223.338 & 61.157 & 197.576 & 162.683 & 60.22 & 41.592 & 103.603 & 53.371 & 93.509\\ 
-9.0 & 147.287 & 134.721 & 108.253 & 35.658 & 71.804 & 1.591 & 221.89 & 31.861 & 86.124 & 103.211 & 160.752 & 59.993 & 185.295 & 252.617 & 239.529\\ 
-10.0 & 107.99 & 242.826 & 20.87 & 251.699 & 239.98 & 53.651 & 63.281 & 96.372 & 25.601 & 222.378 & 127.271 & 236.955 & 195.604 & 201.073 & 50.68\\ 
-11.0 & 66.843 & 193.688 & 77.929 & 156.808 & 116.903 & 215.925 & 47.699 & 67.468 & 119.391 & 230.679 & 19.317 & 104.118 & 143.069 & 177.011 & 96.542\\ 
-12.0 & 103.571 & 51.331 & 96.66 & 90.633 & 241.807 & 47.074 & 190.508 & 219.786 & 228.043 & 96.151 & 187.646 & 233.202 & 19.263 & 227.613 & 215.424\\ 
-13.0 & 101.645 & 31.607 & 51.963 & 92.539 & 238.774 & 70.382 & 209.095 & 91.714 & 49.849 & 100.635 & 177.559 & 61.67 & 196.796 & 77.412 & 34.366\\ 
-14.0 & 30.906 & 154.445 & 20.109 & 92.019 & 72.787 & 6.324 & 245.944 & 156.275 & 198.169 & 52.48 & 228.02 & 214.756 & 106.027 & 113.523 & 215.148\\ 
-15.0 & 250.627 & 51.754 & 53.844 & 76.019 & 185.036 & 216.172 & 58.179 & 210.186 & 222.274 & 175.591 & 153.068 & 30.0 & 70.486 & 35.551 & 47.623\\ 
-16.0 & 213.321 & 104.582 & 18.562 & 67.508 & 200.546 & 143.43 & 201.902 & 184.092 & 76.982 & 135.874 & 224.323 & 63.053 & 174.118 & 141.251 & 206.455\\ 
-17.0 & 29.389 & 93.519 & 211.335 & 60.47 & 30.274 & 212.46 & 196.486 & 173.071 & 77.239 & 98.726 & 4.193 & 198.201 & 208.69 & 228.378 & 49.473\\ 
-18.0 & 195.497 & 101.95 & 249.769 & 200.754 & 83.965 & 239.988 & 39.146 & 16.22 & 32.833 & 2.431 & 231.399 & 234.421 & 192.944 & 166.454 & 143.415\\ 
-19.0 & 158.16 & 170.841 & 119.892 & 33.599 & 24.321 & 91.204 & 64.33 & 121.132 & 98.159 & 161.71 & 206.886 & 142.903 & 246.62 & 11.874 & 252.001\\ 
+0.0 & 141.587 & 147.807 & 18.634 & 140.561 & 139.669 & 188.75 & 136.362 & 222.179 & 216.358 & 193.761 & 73.195 & 154.315 & 188.166 & 221.508 & 100.682\\ 
+1.0 & 237.598 & 94.612 & 197.325 & 250.313 & 110.662 & 127.267 & 115.431 & 204.143 & 110.629 & 12.782 & 73.888 & 241.525 & 43.99 & 249.438 & 209.184\\ 
+2.0 & 19.48 & 31.134 & 192.194 & 32.261 & 49.988 & 142.631 & 167.684 & 88.867 & 184.068 & 103.502 & 135.944 & 12.515 & 174.025 & 46.818 & 149.154\\ 
+3.0 & 4.917 & 192.06 & 86.59 & 245.928 & 70.908 & 247.434 & 49.163 & 200.105 & 224.294 & 42.617 & 83.086 & 251.94 & 96.094 & 108.293 & 116.583\\ 
+4.0 & 109.234 & 48.983 & 216.928 & 228.443 & 2.22 & 114.391 & 146.433 & 101.617 & 211.012 & 106.881 & 136.375 & 40.507 & 220.868 & 32.054 & 133.658\\ 
+5.0 & 168.597 & 223.705 & 211.099 & 8.819 & 16.635 & 251.751 & 22.539 & 110.044 & 155.799 & 92.625 & 128.944 & 91.167 & 136.526 & 103.162 & 230.872\\ 
+6.0 & 86.02 & 128.109 & 74.832 & 98.393 & 5.268 & 234.295 & 225.926 & 22.687 & 179.032 & 126.705 & 209.122 & 162.626 & 3.918 & 140.754 & 96.551\\ 
+7.0 & 76.875 & 10.567 & 242.428 & 6.312 & 211.138 & 129.815 & 246.136 & 118.315 & 240.23 & 24.465 & 219.083 & 243.874 & 106.071 & 209.646 & 44.233\\ 
+8.0 & 6.399 & 187.04 & 238.39 & 140.404 & 246.932 & 112.356 & 11.3 & 97.853 & 97.683 & 164.443 & 62.669 & 205.508 & 199.404 & 137.437 & 187.287\\ 
+9.0 & 226.41 & 240.212 & 181.827 & 37.954 & 0.028 & 177.432 & 70.542 & 103.877 & 87.566 & 199.135 & 8.733 & 2.999 & 231.368 & 153.88 & 190.268\\ 
+10.0 & 178.416 & 10.163 & 7.46 & 180.122 & 107.695 & 241.944 & 172.694 & 64.278 & 207.84 & 207.04 & 79.606 & 154.793 & 171.771 & 16.747 & 8.08\\ 
+11.0 & 218.742 & 215.11 & 178.857 & 44.683 & 106.971 & 104.854 & 47.587 & 158.285 & 108.266 & 163.067 & 73.665 & 54.143 & 103.85 & 124.692 & 64.509\\ 
+12.0 & 131.838 & 28.858 & 207.593 & 139.734 & 68.551 & 248.96 & 164.704 & 213.185 & 182.984 & 52.834 & 5.384 & 47.009 & 115.225 & 241.151 & 119.737\\ 
+13.0 & 61.701 & 137.105 & 16.302 & 101.25 & 194.126 & 44.415 & 141.786 & 20.18 & 223.788 & 104.582 & 178.426 & 76.085 & 71.385 & 107.472 & 179.249\\ 
+14.0 & 131.27 & 128.797 & 84.994 & 205.675 & 88.935 & 28.93 & 71.572 & 141.599 & 237.876 & 123.67 & 30.565 & 33.584 & 10.798 & 204.964 & 220.463\\ 
+15.0 & 194.598 & 85.244 & 230.848 & 195.42 & 213.764 & 69.009 & 161.704 & 199.713 & 239.808 & 253.277 & 110.25 & 251.625 & 198.215 & 125.291 & 72.588\\ 
+16.0 & 73.352 & 194.397 & 193.063 & 199.441 & 218.117 & 44.826 & 105.339 & 162.596 & 57.457 & 121.101 & 227.093 & 210.739 & 84.817 & 1.894 & 82.938\\ 
+17.0 & 65.462 & 81.576 & 191.245 & 71.347 & 56.088 & 226.868 & 101.614 & 73.157 & 213.851 & 116.955 & 39.634 & 164.889 & 76.568 & 36.163 & 103.585\\ 
+18.0 & 108.193 & 192.956 & 103.207 & 64.606 & 217.151 & 167.874 & 163.562 & 1.94 & 13.971 & 38.944 & 226.644 & 89.909 & 13.991 & 95.732 & 101.605\\ 
+19.0 & 79.883 & 250.384 & 227.905 & 183.548 & 87.725 & 239.59 & 93.472 & 232.966 & 253.973 & 148.126 & 64.793 & 246.475 & 36.213 & 83.827 & 185.482\\ 
 \bottomrule 
  \end{tabular}
 }\end{table}
@@ -681,7 +665,7 @@ index & col 1 & col 2 & col 3 & col 4 & col 5 & col 6 & col 7 & col 8 & col 9 & 
 
         
     \begin{figure}
-        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{my_notebook_files/my_notebook_31_0.pdf}\end{center}
+        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{my_notebook_files/my_notebook_29_0.pdf}\end{center}
         \caption{}
         \label{}
     \end{figure}
@@ -692,7 +676,7 @@ index & col 1 & col 2 & col 3 & col 4 & col 5 & col 6 & col 7 & col 8 & col 9 & 
 
         
     \begin{figure}
-        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{my_notebook_files/my_notebook_33_0.pdf}\end{center}
+        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{my_notebook_files/my_notebook_31_0.pdf}\end{center}
         \caption{}
         \label{}
     \end{figure}
@@ -703,7 +687,7 @@ index & col 1 & col 2 & col 3 & col 4 & col 5 & col 6 & col 7 & col 8 & col 9 & 
 
         
     \begin{figure}
-        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{my_notebook_files/my_notebook_35_0.pdf}\end{center}
+        \begin{center}\adjustimage{max size={0.9\linewidth}{0.4\paperheight}}{my_notebook_files/my_notebook_33_0.pdf}\end{center}
         \caption{}
         \label{}
     \end{figure}
